attempt to fix whitespace

--- a/src/css/_header.scss
+++ b/src/css/_header.scss
@@ -331,7 +331,8 @@ a,
   border-top: none;
 }
 
-.ios, .android {
+.ios,
+.android {
   .article__header .headline {
     padding: 4px 12px 30px 12px;
   }
@@ -339,10 +340,6 @@ a,
     margin-bottom: 20px;
     margin-top: 0px;
   }
-}
-
-.content__main-column--interactive .element--immersive {
-  font-size: 17px !important;
 }
 
 // .content__main-column--interactive,
