--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -14,6 +14,8 @@
 .interactive-atom {
   margin: 0 !important;
   background: none !important;
+  padding-bottom: 0px;
+  padding-top: 0px;
 }
 
 // .gs-container {
@@ -221,4 +223,10 @@ canvas {
     font-size: 12px;
     color: #dcdcdc;
   }
+}
+
+//Immersive over rides //
+.content__main-column--interactive .element--immersive {
+  font-size: 17px !important;
+  margin-bottom: 0px !important;
 }
